--- a/HiepVQ_TrainingAutomationTest/automationPractice/reports/Automation_Report_2021-05-06_09-11-05.html
+++ b/HiepVQ_TrainingAutomationTest/automationPractice/reports/Automation_Report_2021-05-06_09-11-05.html
@@ -11,9 +11,9 @@
         <div class="row">
             <div class="col-xs-12">
                 <h2 class="text-capitalize">Testing Website Result</h2>
-                <p class='attribute'><strong>Start Time: </strong>2021-04-13 14:49:35</p>
-                <p class='attribute'><strong>Duration: </strong>652.03 s</p>
-                <p class='attribute'><strong>Summary: </strong>Total: 16, Pass: 15, Fail: 1</p>
+                <p class='attribute'><strong>Start Time: </strong>2021-05-06 09:11:05</p>
+                <p class='attribute'><strong>Duration: </strong>426.92 s</p>
+                <p class='attribute'><strong>Summary: </strong>Total: 16, Pass: 14, Fail: 1, Error: 1</p>
             </div>
         </div>
         <div class="row">
@@ -21,7 +21,7 @@
                 <table class='table table-hover table-responsive'>
                     <thead>
                         <tr>
-                            <th>testCases.package.test_CreateAccount.createAccountTest</th>
+                            <th>testCases.package.test_CreateAccount.TestCreateAccount</th>
                             <th>Status</th>
                             <th></th>
                         </tr>
@@ -45,7 +45,7 @@
                         </tr>
                         <tr>
                             <td colspan="3">
-                                Total: 2, Pass: 2 -- Duration: 37.93 s
+                                Total: 2, Pass: 2 -- Duration: 43.79 s
                             </td>
                         </tr>
                     </tbody>
@@ -57,7 +57,7 @@
                 <table class='table table-hover table-responsive'>
                     <thead>
                         <tr>
-                            <th>testCases.package.test_homePage.home_page</th>
+                            <th>testCases.package.test_homePage.TestHomePage</th>
                             <th>Status</th>
                             <th></th>
                         </tr>
@@ -98,7 +98,7 @@
                         </tr>
                         <tr style="display:none;">
                             <td class="col-xs-9" colspan="3"><p style="color:maroon;">AssertionError: 'dress' not found in 't-shirts > faded short sleeve t-shirts' : Suggest keyword is not suitable!</p><p style="color:maroon;">Traceback (most recent call last):
-  File "C:\Users\user\Documents\LQA- Data\Lotus Quality Assurance\LQA- Selenium& Python\Training Course - Selenium - LQA\automationPractice\testCases\package\test_homePage.py", line 57, in test_SuggestKeyWord
+  File "I:\Work 4\LQA\Lotus Quality Assurance\LQA - Selenium\automationPractice\HiepVQ_TrainingAutomationTest\automationPractice\testCases\package\test_homePage.py", line 61, in test_SuggestKeyWord
     self.assertIn(self.keyword, suggestKeyword.lower(), 'Suggest keyword is not suitable!')
 AssertionError: 'dress' not found in 't-shirts > faded short sleeve t-shirts' : Suggest keyword is not suitable!
 </p>
@@ -122,7 +122,7 @@ AssertionError: 'dress' not found in 't-shirts > faded short sleeve t-shirts' : 
                         </tr>
                         <tr>
                             <td colspan="3">
-                                Total: 6, Pass: 5, Fail: 1 -- Duration: 207.87 s
+                                Total: 6, Pass: 5, Fail: 1 -- Duration: 110.40 s
                             </td>
                         </tr>
                     </tbody>
@@ -134,35 +134,7 @@ AssertionError: 'dress' not found in 't-shirts > faded short sleeve t-shirts' : 
                 <table class='table table-hover table-responsive'>
                     <thead>
                         <tr>
-                            <th>testCases.package.test_ContactUs.contact_us</th>
-                            <th>Status</th>
-                            <th></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr class='success'>
-                            <td class="col-xs-10">test_ContactUs</td>
-                            <td class="col-xs-1">
-                                <span class="label label-success" style="display:block;width:40px;">Pass</span>
-                            </td>
-                            <td class="col-xs-1">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td colspan="3">
-                                Total: 1, Pass: 1 -- Duration: 18.50 s
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-xs-12 col-sm-10 col-md-10">
-                <table class='table table-hover table-responsive'>
-                    <thead>
-                        <tr>
-                            <th>testCases.package.test_Order.Order</th>
+                            <th>testCases.package.test_Order.TestOrder</th>
                             <th>Status</th>
                             <th></th>
                         </tr>
@@ -194,7 +166,7 @@ AssertionError: 'dress' not found in 't-shirts > faded short sleeve t-shirts' : 
                         </tr>
                         <tr>
                             <td colspan="3">
-                                Total: 3, Pass: 3 -- Duration: 266.20 s
+                                Total: 3, Pass: 3 -- Duration: 135.73 s
                             </td>
                         </tr>
                     </tbody>
@@ -206,7 +178,7 @@ AssertionError: 'dress' not found in 't-shirts > faded short sleeve t-shirts' : 
                 <table class='table table-hover table-responsive'>
                     <thead>
                         <tr>
-                            <th>testCases.package.test_productDetail.product_detail</th>
+                            <th>testCases.package.test_productDetail.TestProductDetail</th>
                             <th>Status</th>
                             <th></th>
                         </tr>
@@ -246,7 +218,41 @@ AssertionError: 'dress' not found in 't-shirts > faded short sleeve t-shirts' : 
                         </tr>
                         <tr>
                             <td colspan="3">
-                                Total: 4, Pass: 4 -- Duration: 121.53 s
+                                Total: 4, Pass: 4 -- Duration: 137.00 s
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12 col-sm-10 col-md-10">
+                <table class='table table-hover table-responsive'>
+                    <thead>
+                        <tr>
+                            <th>unittest.loader._FailedTest</th>
+                            <th>Status</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr class='warning'>
+                            <td class="col-xs-10">test_ContactUs</td>
+                            <td class="col-xs-1">
+                                <span class="label label-warning" style="display:block;width:40px;">Error</span>
+                            </td>
+                            <td class="col-xs-1">
+                                <button class="btn btn-default btn-xs">View</button>
+                            </td>
+                        </tr>
+                        <tr style="display:none;">
+                            <td class="col-xs-9" colspan="3"><p style="color:maroon;">AttributeError: type object 'TestContactUs' has no attribute 'test_ContactUs'</p><p style="color:maroon;">AttributeError: type object 'TestContactUs' has no attribute 'test_ContactUs'
+</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="3">
+                                Total: 1, Pass: 0, Error: 1 -- Duration: 0 ms
                             </td>
                         </tr>
                     </tbody>
